--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -33,5 +34,4 @@
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3"
   }
-  
 }
