--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "16": "^0.0.2",
+    "@heroicons/react": "^2.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.8.1",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
+    "heroicons": "^2.1.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
