--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "heroicons": "^2.1.1",
+    "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.0.5",
     "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.14.202",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "^18",
