--- a/package.json
+++ b/package.json
@@ -8,19 +8,27 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "build": "prisma generate && next build"
-    
   },
   "dependencies": {
     "16": "^0.0.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@mui/icons-material": "^5.15.9",
+    "@mui/material": "^5.15.9",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.8.1",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^11.0.3",
     "heroicons": "^2.1.1",
+    "i18next": "^23.9.0",
     "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.0.5",
