--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "spinners-react": "^1.0.7",
     "swiper": "^11.0.5",
     "swr": "^2.2.4",
     "zustand": "^4.5.0"
@@ -46,6 +47,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.33",
     "prisma": "^5.8.1",
+    "source-map-loader": "^1.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3"
   }
